# SimpleRefactorApp

./: Cargo.toml  README.md
SimpleRefactorApp/: AppDelegate.swift  ContentView.swift  SceneDelegate.swift
SimpleRefactorApp.xcodeproj/: project.pbxproj
SimpleRefactorApp.xcodeproj/xcuserdata/ketyung.xcuserdatad/xcschemes/: xcschememanagement.plist
SimpleRefactorAppTests/: SimpleRefactorAppTests.swift
SimpleRefactorAppUITests/: SimpleRefactorAppUITests.swift
src/: state.rs
