[package]
name = "token_staking_program"
version = "0.1.0"
edition = "2021"
authors = ["Christopher K Y Chee <ketyung@techchee.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.9"
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
thiserror = "1.0"
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "token_staking_program"
crate-type = ["cdylib", "lib"]